objects/Build_Component__c.object
<CustomObject>
    <fields>
        <fullName>Backlog_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backlog Component</label>
        <referenceTo>Backlog_Component__c</referenceTo>
        <relationshipLabel>Build Componnets</relationshipLabel>
        <relationshipName>Build_Componnets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Build__c</fullName>
        <label>Build</label>
        <referenceTo>Build__c</referenceTo>
        <relationshipLabel>Build Components</relationshipLabel>
        <relationshipName>Build_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Build Components</relationshipLabel>
        <relationshipName>Build_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_Documented_Components__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that permissions for documented components should be deployed with the profile</description>
        <inlineHelpText>Indicates that permissions for documented components should be deployed with the profile</inlineHelpText>
        <label>Include Documented Components</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Entire_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the entire profile should be deployed</description>
        <inlineHelpText>Indicates that the entire profile should be deployed</inlineHelpText>
        <label>Include Entire Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance_Name__c</fullName>
        <label>Instance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this component will be deleted</description>
        <inlineHelpText>Indicates that this component will be deleted</inlineHelpText>
        <label>Is Deletion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this build component is a profile permission</description>
        <label>Is Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Component__c</fullName>
        <label>Parent Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Data_1__c</fullName>
        <description>Stores the aggregated profile selection data</description>
        <label>Profile Data 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Data_2__c</fullName>
        <description>Stores the aggregated profile selection data</description>
        <label>Profile Data 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Documented</fullName>
                </value>
                <value>
                    <fullName>Undocumented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Build Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Build__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Component_Type__c</columns>
        <columns>Parent_Component__c</columns>
        <columns>Backlog_Component__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BC-{000000}</displayFormat>
        <label>Build Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Build Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>